# neflab

./: Boolean-inl.h  BuildMesh-inl.h  CMakeLists.txt  FacetIntersectionTest-inl.h  InteriorVolumes-inl.h  PaternityTest-inl.h  ShellVisitor.h  main.cpp
Triangulate/: CMakeLists.txt  Triangulator-inl.h  Triangulator.cpp  Triangulator.h
utility/: CMakeLists.txt
